Normalize around `/archives` API path
This is continued progress towards our standardization around plural
versions of entity names in our API paths.
