# packages/api/docs/src/api.yaml
@@ -55,12 +55,12 @@ paths:
     $ref: "./paths/folder.yaml#/folders-id-children"
   /folders/{id}/share-links:
     $ref: "./paths/folder.yaml#/folders-id-share-links"
-  /archive/{id}:
-    $ref: "./paths/archive.yaml#/archives~1{id}"
-  /archive/{id}/folders/shared:
-    $ref: "./paths/archive.yaml#/archive-id-folders-shared"
   /archives:
     $ref: "./paths/archive.yaml#/archives"
+  /archives/{id}:
+    $ref: "./paths/archive.yaml#/archives~1{id}"
+  /archives/{id}/folders/shared:
+    $ref: "./paths/archive.yaml#/archives-id-folders-shared"
   /applications:
     $ref: "./paths/application.yaml#/applications"
   /applications/{id}:
